# test6

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  theme.json
attached_assets/: Pasted-0-guid-cramer-weighs-united-airlines-nvidia-203428365-html-link-https-finance-yahoo-com-news-1744478536628.txt  Pasted-Finance-Advisor-is-a-multi-platform-financial-management-solution-designed-to-help-users-track-their-1744476662611.txt  Pasted-status-OK-request-id-c2f9ab07-2414-499f-9f1a-c5bc6bf0d9bd-data-symbol-AAPL-NASDAQ-type-s-1744478384523.txt  content-1744478316243.md  content-1744482709492.md  content-1744482712740.md
backend/: test_finance_api.py
backend/finance_advisor/: asgi.py  settings.py  urls.py  wsgi.py
backend/finance_api/: __init__.py  agents.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/finance_api/services/: finance_data_service.py
backend/finance_api/views/: finance_views.py
client/: index.html
client/src/: App.tsx
client/src/hooks/: use-auth.tsx  use-finance-data.tsx
client/src/lib/: supabase.ts
client/src/pages/: about-page.tsx  ai-advisor-page.tsx  analysis-page.tsx  auth-page.tsx  dashboard-page.tsx  home-page.tsx  market-page.tsx  (+2 more)
server/: auth.ts  routes.ts  storage.ts
server/services/: financeApiService.ts
shared/: schema.ts
temp-clone/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
temp-clone/app/: layout.tsx
temp-clone/lib/: utils.ts
temp-repo/: tailwind.config.ts
temp-repo/app/: globals.css
temp-repo/components/: app-layout.tsx  app-sidebar.tsx
(+51 files in other folders)
